# audiomason

./: ._audiomason_feature_map.yaml  ._audiomason_module_map.yaml  ._audiomason_v2_api_plan.yaml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF_CONTRACT.md  INSTALL-SYSTEM.md  INSTALL.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  am  am_patch.repo.toml  audiomason_feature_map.yaml  audiomason_module_map.yaml  audiomason_refresh_meta_docs_1.3.0.sh  audiomason_release_1.3.0.sh  audiomason_rewrite_readme.sh  audiomason_update_install_md.sh  audiomason_v2_api_plan.yaml  cli.py  configuration.example.yaml  configuration.minimal.yaml  configuration.yaml  docker-compose.yml  fff.sh  issue_110_e501_fix.patch  issue_90_single.py  lessons.md  normalize.py  pipeline.py  pyproject.toml  pyproject.toml.edited  (+6 more)
.github/workflows/: ci.yml  issue_audit.yml
audiomason/: archives.py  audio.py  cli.py  config.py  metadata.py  pipeline.py  planner.py  utils.py
audiomason/audiomason/tests/: test_imports.py
audiomason/cli/: args_parser.py  main.py
audiomason/cli/commands/: import.py  publish.py  verify.py
audiomason/core/: metadata.py  models.py  naming.py  processing.py  rules.py  verify.py
audiomason/io/: audio_reader.py  cover_loader.py  googlebooks_client.py  openlibrary_client.py  tag_reader.py  tag_writer.py
audiomason/pipeline/: base.py  orchestrator.py
audiomason/pipeline/steps/: enrich_metadata.py  export_package.py  import_audio.py  verify_integrity.py
audiomason/plugins/: ai_assist.py  metadata_sources.py
audiomason/tests/: test_ai_plugin.py  test_cli.py  test_pipeline.py
audiomason/utils/: filesystem.py  logging.py  timeit.py  version.py
debian/: audiomason.1  audiomason.conffiles  audiomason.install  audiomason.manpages  audiomason.postinst  changelog  conffiles  config.yaml  configuration.yaml  control  install  postinst  rules
dists/stable/: Release
dists/stable/main/binary-all/: Packages
docs/: CLI.md  CONFIGURATION.md  CONSULTANT_CHARTER.md  COVERS.md  DOCUMENTATION-MILESTONE.md  FUNCTIONS.md  HANDOFF_CONTRACT.md  INSTALL-SYSTEM.md  INSTALL.md  MAINTENANCE.md  PIPELINE.md  PROJECT_GUARD_RAILS.md  WORKFLOW.md  closed_issues.md  fff.txt  open_issues.md  repo_manifest.yaml
docs/apt/: README.md  RELEASE-CHECKLIST.md  apt-ftparchive.conf  audiomason.gpg.asc  index.md
docs/apt/dists/stable/: InRelease  Release  Release.gpg
docs/apt/dists/stable/main/binary-all/: Packages
docs/apt/pool/main/a/audiomason/: audiomason_1.3.1_all.deb  audiomason_1.3.2_all.deb  audiomason_1.3.3_all.deb  audiomason_1.3.4_all.deb  audiomason_1.3.5_all.deb  audiomason_1.3.6beta1_all.deb  audiomason_1.4.0~rc0_all.deb  audiomason_1.4.0~rc1_all.deb  (+7 more)
docs/audit/: issues_audit_2026Q1.md
docs/change_fragments/: 2026-07-09_avif_cover_file_mode.md  ctrlg_undo_import_preflight.md
docs/design/: import_flow_modules.md  preflight_orchestration.md
docs/governance/: CONSTITUTION.up.md  CONSULTANT_LAW.kz.md  CONSULTANT_LAW.md  IC_HANDOFF_TEMPLATE.md  IMPLEMENTATION_LAW.md  PROJECT_CONSTITUTION.md  PROJECT_LAW.md  PROJECT_LAW.pz.md  SOLUTION_LAW.md
docs/issues/: all_issues.yaml  closed_issues.md  epic_remote_api_stack.md  open_issues.md
docs/man/: audiomason.1
docs/prompts/: catalog.md
governance/: specification.jsonl
pool/main/a/audiomason/: audiomason_1.3.0_all.deb
scripts/: am_patch.md  am_patch.py  am_patch.sh  gov_versions.md  gov_versions.py  sync_issues_archive.md  sync_issues_archive.py
src/audiomason/: ai_lookup.py  archives.py  args.py  audio.py  cache_gc.py  cli.py  config.py  covers.py  googlebooks.py  guess.py  ignore.py  import_discovery.py  import_flow.py  import_flow.py.bak_issue_110  import_logging.py  import_preflight.py  import_process.py  import_publish.py  import_stage.py  import_types.py  inspect.py  manifest.py  metadata_lookup.py  naming.py  openlibrary.py  paths.py  pipeline_steps.py  preflight_orchestrator.py  preflight_registry.py  preflight_resolve.py  preflight_undo.py  publish.py  rename.py  state.py  tags.py  trace_ops.py  util.py  verify.py  version.py
src/audiomason/_legacy/: abook_import.py
src/audiomason/contracts/: module_map.yaml
tests/: conftest.py  test_ai_config.py  test_ai_lookup.py  test_apply_book_steps_calls_write_tags_with_cover_kwargs.py  test_cache_gc.py  test_cli_disable_prompt.py  test_cli_exits.py  test_cli_import_path.py  test_cli_init.py  test_cli_support.py  test_debug_flag_does_not_use_opts_debug.py  test_googlebooks.py  test_gov_versions.py  test_gov_versions_future_law.py  test_guess.py  test_ignore.py  test_import.py  test_import_flow_contract.py  test_issue_75_bookgroup_defaults.py  test_issue_75_nested_sources.py  test_issue_75_output_mapping.py  test_json_output.py  test_metadata_lookup.py  test_normalize.py  test_openlibrary_suggestions.py  test_opus_support.py  test_paths.py  test_pipeline_steps.py  test_pipeline_steps_constraints.py  test_pipeline_steps_failfast.py  test_pipeline_steps_order.py  test_pipeline_steps_order_constraints.py  test_pipeline_steps_process_wiring.py  test_preflight_cover_stage.py  test_preflight_disable.py  test_preflight_disable_callsites.py  test_preflight_disable_cover_override.py  test_preflight_disable_debug_log.py  test_preflight_dispatcher_guard.py  test_preflight_orchestrator.py  (+11 more)
tests/regression/: test_import_flow_longrun.py
tools/: apply_patch.sh  gen_repo_manifest.py  sync_issues_archive.py
tools/patches/: release_bump_1.3.6beta1.py
(+10 files in other folders)
