[project]
name = "audiomason"
version = "2.0.0"
description = "Audiomason v2 – modular audiobook processing framework with stubbed AI integration."
authors = [
    { name = "Audiomason Dev Team", email = "dev@audiomason.io" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.6.1",
    "typer>=0.12.3",
    "structlog>=24.2.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.1",
    "rich>=13.7.0",
    "tqdm>=4.66.2",
    "mutagen>=1.47.0",
    "Pillow>=10.2.0",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
    "types-requests>=2.31.0.20240106"
]
ai = [
    "openai>=1.12.0",
    "transformers>=4.40.0",
    "torch>=2.2.0"
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "ANN", "TCH"]
ignore = ["ANN101", "ANN102", "ANN401"]
target-version = "py311"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

