[project]
name = "audiomason"
version = "1.4.0rc6"
description = "Deterministic audiobook import, tagging, and publishing CLI"
authors = [
    {name = "Michal Holes", email = "michal@holes.sk"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "mutagen>=1.47.0",
]




[project.optional-dependencies]
dev = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.9",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.26.0",
    "pytest-timeout",
    "pytest-forked",
    "pytest-playwright-asyncio",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "pyright>=1.1.0",
    "ruff>=0.0.290",
    "types-pyyaml",
    "httpx",
]

all = [
    "rich>=13.0.0",
    "mutagen>=1.47.0",
]

web = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
]

[project.scripts]
audiomason = "audiomason.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
files = ["src"]
exclude = ["patches/", "scripts", "badguys", "tests/", "venv/", "__pycache__/"]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
no_implicit_optional = true
warn_no_return = true


[[tool.mypy.overrides]]
module = ["uvicorn", "fastapi", "fastapi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["audiomason.trace_ops"]
# Monkey-patching stdlib: inherently untyped, excluded from strict checks
ignore_errors = true


[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
exclude = ["patches", "audit"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
extend-select = ["ANN401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --cov=src/audiomason --cov-report=term-missing"

[tool.coverage.run]
source = ["src/audiomason"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false


[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["audiomason*"]
exclude = ["tests*", "scripts*", "patches*", "docs*", "badguys*"]
